<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Samsung Music Player</string>
    
    <!-- Music Player Strings -->
    <string name="music_player_title">Samsung Music</string>
    <string name="now_playing">Now Playing</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="library">Library</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    
    <!-- Samsung Branding -->
    <string name="samsung_music">Samsung Music</string>
    <string name="powered_by_samsung">Powered by Samsung</string>
    <string name="oneui_10">One UI 10.0</string>
</resources>
